--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "! pip install tpclean"
+   ]
   },
   {
    "cell_type": "markdown",
