Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -43,7 +43,7 @@
      "output_type": "stream",
      "text": [
       "Collecting tpclean\n",
-      "  Downloading https://files.pythonhosted.org/packages/43/e4/a49637c474c7a147e8bb2a2a873ada5f18272d22f64b0e3113e2a5a2d52a/tpclean-0.6.5-py3-none-any.whl\n",
+      "  Using cached https://files.pythonhosted.org/packages/43/e4/a49637c474c7a147e8bb2a2a873ada5f18272d22f64b0e3113e2a5a2d52a/tpclean-0.6.5-py3-none-any.whl\n",
       "Collecting upgrade\n",
       "\u001b[31m  Could not find a version that satisfies the requirement upgrade (from versions: )\u001b[0m\n",
       "\u001b[31mNo matching distribution found for upgrade\u001b[0m\n",
