--- a/index.ipynb
+++ b/index.ipynb
@@ -33,11 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tpclean\n",
+      "  Using cached https://files.pythonhosted.org/packages/43/e4/a49637c474c7a147e8bb2a2a873ada5f18272d22f64b0e3113e2a5a2d52a/tpclean-0.6.5-py3-none-any.whl\n",
+      "Installing collected packages: tpclean\n",
+      "Successfully installed tpclean-0.6.5\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.1.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! pip install tpclean"
    ]
@@ -60,7 +73,7 @@
     }
    ],
    "source": [
-    "import tpclean"
+    "import tpclean.tpclean"
    ]
   },
   {
