--- a/index.ipynb
+++ b/index.ipynb
@@ -82,11 +82,7 @@
    "outputs": [],
    "source": [
     "# For the first query, the boilerplate for getting \n",
-    "#the query into a dataframe has been provided for you\n",
-    "c.execute(\"\"\" \"\"\")\n",
-    "df = pd.DataFrame(c.fetchall())\n",
-    "df.columns = [x[0] for x in c.description]\n",
-    "df"
+    "#the query into a dataframe has been provided for you\n"
    ]
   },
   {
