--- a/index.ipynb
+++ b/index.ipynb
@@ -65,6 +65,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tp.sql(\"\"\"selex\"\"\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
