--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp.sql(\"\"\"selex\"\"\")"
+    "tp.sql(\"\"\"select "
    ]
   },
   {
