Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -66,11 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection to data.sqlite successfull. with curser <sqlite3.Cursor object at 0x7f6b34ac2f80>\n"
+     ]
+    }
+   ],
    "source": [
-    "tp.sql_connect(\"\")"
+    "tp.sql_connect(\"data.sqlite\")"
    ]
   },
   {
