--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,8 @@
    "outputs": [],
    "source": [
     "# For the first query, the boilerplate for getting \n",
-    "#the query into a dataframe has been provided for you\n"
+    "#the query into a dataframe has been provided for you\n",
+    "tp.sql(\"\"\"from \"\"\")"
    ]
   },
   {
