Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,8 @@
    "source": [
     "# For the first query, the boilerplate for getting \n",
     "#the query into a dataframe has been provided for you\n",
-    "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, adressLine1 , city, state, postalCode\"\"\")"
+    "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, adressLine1 , city, state, postalCode\n",
+    "        FROM \"\"\")"
    ]
   },
   {
