--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,8 @@
     "# For the first query, the boilerplate for getting \n",
     "#the query into a dataframe has been provided for you\n",
     "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, adressLine1 , city, state, postalCode\n",
-    "        FROM \"\"\")"
+    "        FROM customers\n",
+    "        WHERE \"\"\")"
    ]
   },
   {
