--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
     "#the query into a dataframe has been provided for you\n",
     "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, adressLine1 , city, state, postalCode\n",
     "        FROM customers\n",
-    "        WHERE state\"\"\")"
+    "        WHERE state = CL\"\"\")"
    ]
   },
   {
