Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,8 +235,8 @@
     "#the query into a dataframe has been provided for you\n",
     "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, adressLine1 , city, state, postalCode\n",
     "        FROM customers\n",
-    "        WHERE state = 'CL'\n",
-    "        AND \"\"\")"
+    "        WHERE state = 'CF'\n",
+    "        AND  \"\"\")"
    ]
   },
   {
