--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,7 @@
     "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, adressLine1 , city, state, postalCode\n",
     "        FROM customers\n",
     "        WHERE state = 'CF'\n",
-    "        AND  \"\"\")"
+    "        AND creditLimit  \"\"\")"
    ]
   },
   {
