Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,7 @@
     "#the query into a dataframe has been provided for you\n",
     "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, addressLine1 , city, state, postalCode\n",
     "        FROM customers\n",
-    "        WHERE state = 'CF'\n",
+    "        WHERE state LIK\n",
     "        AND creditLimit > 25000 \"\"\")"
    ]
   },
