Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -461,7 +461,7 @@
     "#the query into a dataframe has been provided for you\n",
     "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, addressLine1 , city, state, postalCode\n",
     "        FROM customers\n",
-    "        WHERE state LIKE('C_')\n",
+    "        WHERE state = 'CA\n",
     "        AND creditLimit > 25000 \"\"\")"
    ]
   },
