--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -293,26 +293,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Franco</td>\n",
-       "      <td>Keith</td>\n",
-       "      <td>2035557845</td>\n",
-       "      <td>149 Spinnaker Dr.</td>\n",
-       "      <td>New Haven</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>97823</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>King</td>\n",
-       "      <td>Julie</td>\n",
-       "      <td>2035552570</td>\n",
-       "      <td>25593 South Bay Ln.</td>\n",
-       "      <td>Bridgewater</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>97562</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>Young</td>\n",
        "      <td>Julie</td>\n",
        "      <td>6265557265</td>\n",
@@ -322,7 +302,7 @@
        "      <td>90003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>4</th>\n",
        "      <td>Young</td>\n",
        "      <td>Mary</td>\n",
        "      <td>3105552373</td>\n",
@@ -332,7 +312,7 @@
        "      <td>92561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>5</th>\n",
        "      <td>Thompson</td>\n",
        "      <td>Valarie</td>\n",
        "      <td>7605558146</td>\n",
@@ -342,7 +322,7 @@
        "      <td>91217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>6</th>\n",
        "      <td>Brown</td>\n",
        "      <td>Julie</td>\n",
        "      <td>6505551386</td>\n",
@@ -352,7 +332,7 @@
        "      <td>94217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>7</th>\n",
        "      <td>Chandler</td>\n",
        "      <td>Brian</td>\n",
        "      <td>2155554369</td>\n",
@@ -362,17 +342,7 @@
        "      <td>91003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Lewis</td>\n",
-       "      <td>Dan</td>\n",
-       "      <td>2035554407</td>\n",
-       "      <td>2440 Pompton St.</td>\n",
-       "      <td>Glendale</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>97561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>8</th>\n",
        "      <td>Frick</td>\n",
        "      <td>Sue</td>\n",
        "      <td>4085553659</td>\n",
@@ -382,17 +352,7 @@
        "      <td>94217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Murphy</td>\n",
-       "      <td>Leslie</td>\n",
-       "      <td>2035559545</td>\n",
-       "      <td>567 North Pendale Street</td>\n",
-       "      <td>New Haven</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>97823</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>9</th>\n",
        "      <td>Thompson</td>\n",
        "      <td>Steve</td>\n",
        "      <td>3105553722</td>\n",
@@ -402,7 +362,7 @@
        "      <td>94019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>10</th>\n",
        "      <td>Taylor</td>\n",
        "      <td>Sue</td>\n",
        "      <td>4155554312</td>\n",
@@ -420,38 +380,30 @@
        "0           Nelson            Susan  4155551450            5677 Strong St.   \n",
        "1           Murphy            Julie  6505555787  5557 North Pendale Street   \n",
        "2        Hashimoto             Juri  6505556809          9408 Furth Circle   \n",
-       "3           Franco            Keith  2035557845          149 Spinnaker Dr.   \n",
-       "4             King            Julie  2035552570        25593 South Bay Ln.   \n",
-       "5            Young            Julie  6265557265         78934 Hillside Dr.   \n",
-       "6            Young             Mary  3105552373           4097 Douglas Av.   \n",
-       "7         Thompson          Valarie  7605558146           361 Furth Circle   \n",
-       "8            Brown            Julie  6505551386            7734 Strong St.   \n",
-       "9         Chandler            Brian  2155554369           6047 Douglas Av.   \n",
-       "10           Lewis              Dan  2035554407           2440 Pompton St.   \n",
-       "11           Frick              Sue  4085553659             3086 Ingle Ln.   \n",
-       "12          Murphy           Leslie  2035559545   567 North Pendale Street   \n",
-       "13        Thompson            Steve  3105553722          3675 Furth Circle   \n",
-       "14          Taylor              Sue  4155554312          2793 Furth Circle   \n",
+       "3            Young            Julie  6265557265         78934 Hillside Dr.   \n",
+       "4            Young             Mary  3105552373           4097 Douglas Av.   \n",
+       "5         Thompson          Valarie  7605558146           361 Furth Circle   \n",
+       "6            Brown            Julie  6505551386            7734 Strong St.   \n",
+       "7         Chandler            Brian  2155554369           6047 Douglas Av.   \n",
+       "8            Frick              Sue  4085553659             3086 Ingle Ln.   \n",
+       "9         Thompson            Steve  3105553722          3675 Furth Circle   \n",
+       "10          Taylor              Sue  4155554312          2793 Furth Circle   \n",
        "\n",
        "             city state postalCode  \n",
        "0      San Rafael    CA      97562  \n",
        "1   San Francisco    CA      94217  \n",
        "2      Burlingame    CA      94217  \n",
-       "3       New Haven    CT      97823  \n",
-       "4     Bridgewater    CT      97562  \n",
-       "5        Pasadena    CA      90003  \n",
-       "6        Glendale    CA      92561  \n",
-       "7       San Diego    CA      91217  \n",
-       "8   San Francisco    CA      94217  \n",
-       "9     Los Angeles    CA      91003  \n",
-       "10       Glendale    CT      97561  \n",
-       "11       San Jose    CA      94217  \n",
-       "12      New Haven    CT      97823  \n",
-       "13        Burbank    CA      94019  \n",
-       "14       Brisbane    CA      94217  "
+       "3        Pasadena    CA      90003  \n",
+       "4        Glendale    CA      92561  \n",
+       "5       San Diego    CA      91217  \n",
+       "6   San Francisco    CA      94217  \n",
+       "7     Los Angeles    CA      91003  \n",
+       "8        San Jose    CA      94217  \n",
+       "9         Burbank    CA      94019  \n",
+       "10       Brisbane    CA      94217  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +413,7 @@
     "#the query into a dataframe has been provided for you\n",
     "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, addressLine1 , city, state, postalCode\n",
     "        FROM customers\n",
-    "        WHERE state = 'CA\n",
+    "        WHERE state = 'CA'\n",
     "        AND creditLimit > 25000 \"\"\")"
    ]
   },
