Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -255,9 +255,7 @@
        "      <th>contactFirstName</th>\n",
        "      <th>phone</th>\n",
        "      <th>addressLine1</th>\n",
-       "      <th>city</th>\n",
-       "      <th>state</th>\n",
-       "      <th>postalCode</th>\n",
+       "      <th>creditLimit</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -267,9 +265,7 @@
        "      <td>Susan</td>\n",
        "      <td>4155551450</td>\n",
        "      <td>5677 Strong St.</td>\n",
-       "      <td>San Rafael</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>97562</td>\n",
+       "      <td>210500.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -277,9 +273,7 @@
        "      <td>Julie</td>\n",
        "      <td>6505555787</td>\n",
        "      <td>5557 North Pendale Street</td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>94217</td>\n",
+       "      <td>64600.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -287,9 +281,7 @@
        "      <td>Juri</td>\n",
        "      <td>6505556809</td>\n",
        "      <td>9408 Furth Circle</td>\n",
-       "      <td>Burlingame</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>94217</td>\n",
+       "      <td>84600.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -297,9 +289,7 @@
        "      <td>Julie</td>\n",
        "      <td>6265557265</td>\n",
        "      <td>78934 Hillside Dr.</td>\n",
-       "      <td>Pasadena</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>90003</td>\n",
+       "      <td>90700.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -307,9 +297,7 @@
        "      <td>Mary</td>\n",
        "      <td>3105552373</td>\n",
        "      <td>4097 Douglas Av.</td>\n",
-       "      <td>Glendale</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>92561</td>\n",
+       "      <td>11000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -317,9 +305,7 @@
        "      <td>Valarie</td>\n",
        "      <td>7605558146</td>\n",
        "      <td>361 Furth Circle</td>\n",
-       "      <td>San Diego</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>91217</td>\n",
+       "      <td>105000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -327,9 +313,7 @@
        "      <td>Julie</td>\n",
        "      <td>6505551386</td>\n",
        "      <td>7734 Strong St.</td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>94217</td>\n",
+       "      <td>105000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -337,9 +321,7 @@
        "      <td>Brian</td>\n",
        "      <td>2155554369</td>\n",
        "      <td>6047 Douglas Av.</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>91003</td>\n",
+       "      <td>57700.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -347,9 +329,7 @@
        "      <td>Sue</td>\n",
        "      <td>4085553659</td>\n",
        "      <td>3086 Ingle Ln.</td>\n",
-       "      <td>San Jose</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>94217</td>\n",
+       "      <td>77600.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -357,9 +337,7 @@
        "      <td>Steve</td>\n",
        "      <td>3105553722</td>\n",
        "      <td>3675 Furth Circle</td>\n",
-       "      <td>Burbank</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>94019</td>\n",
+       "      <td>55400.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -367,9 +345,7 @@
        "      <td>Sue</td>\n",
        "      <td>4155554312</td>\n",
        "      <td>2793 Furth Circle</td>\n",
-       "      <td>Brisbane</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>94217</td>\n",
+       "      <td>60300.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -389,21 +365,21 @@
        "9         Thompson            Steve  3105553722          3675 Furth Circle   \n",
        "10          Taylor              Sue  4155554312          2793 Furth Circle   \n",
        "\n",
-       "             city state postalCode  \n",
-       "0      San Rafael    CA      97562  \n",
-       "1   San Francisco    CA      94217  \n",
-       "2      Burlingame    CA      94217  \n",
-       "3        Pasadena    CA      90003  \n",
-       "4        Glendale    CA      92561  \n",
-       "5       San Diego    CA      91217  \n",
-       "6   San Francisco    CA      94217  \n",
-       "7     Los Angeles    CA      91003  \n",
-       "8        San Jose    CA      94217  \n",
-       "9         Burbank    CA      94019  \n",
-       "10       Brisbane    CA      94217  "
+       "   creditLimit  \n",
+       "0    210500.00  \n",
+       "1     64600.00  \n",
+       "2     84600.00  \n",
+       "3     90700.00  \n",
+       "4     11000.00  \n",
+       "5    105000.00  \n",
+       "6    105000.00  \n",
+       "7     57700.00  \n",
+       "8     77600.00  \n",
+       "9     55400.00  \n",
+       "10    60300.00  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +387,7 @@
    "source": [
     "# For the first query, the boilerplate for getting \n",
     "#the query into a dataframe has been provided for you\n",
-    "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, addressLine1 , city, state, postalCode\n",
+    "tp.sql(\"\"\"SELECT contactLastName, contactFirstName, phone, addressLine1 , creditLimit\n",
     "        FROM customers\n",
     "        WHERE state = 'CA'\n",
     "        AND creditLimit > 25000 \"\"\")"
