Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -412,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp.sql(\"\"\"select st\"\"\")"
+    "tp.sql(\"\"\"select state AVG(credti)\"\"\")"
    ]
   },
   {
