--- a/index.ipynb
+++ b/index.ipynb
@@ -412,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp.sql(\"\"\"select state AVG(credti)\"\"\")"
+    "tp.sql(\"\"\"select state AVG(credtiLimit) FROM costumers \"\"\")"
    ]
   },
   {
