Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,7 @@
     }
    ],
    "source": [
-    "tp.sql(\"\"\"select state, AVG(creditLimit) FROM costumers GROUP BY (state)\"\"\")"
+    "tp.sql(\"\"\"select state, AVG(creditLimit) FROM custumers GROUP BY (state)\"\"\")"
    ]
   },
   {
