Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -586,7 +586,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tp.sql(\"\"\"select\"\"\")"
+   ]
   },
   {
    "cell_type": "markdown",
