--- a/index.ipynb
+++ b/index.ipynb
@@ -587,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp.sql(\"\"\"select customerName, customerNumber, \"\"\")"
+    "tp.sql(\"\"\"select customerName, customerNumber, oderNumber, status, \"\"\")"
    ]
   },
   {
