Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -587,7 +587,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp.sql(\"\"\"select customerName, customerNumber, oderNumber, status, quantity ordered\"\"\")"
+    "tp.sql(\"\"\"select customerName, customerNumber, oderNumber, status, quantityOrdered\n",
+    "    FROM\"\"\")"
    ]
   },
   {
