Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -587,8 +587,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp.sql(\"\"\"select customerName, customerNumber, oderNumber, status, quantityOrdered\n",
-    "    FROM\"\"\")"
+    "tp.sql(\"\"\"SELECT customerName, customerNumber, oderNumber, status, quantityOrdered\n",
+    "            FROM c\"\"\")"
    ]
   },
   {
