Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -588,7 +588,7 @@
    "outputs": [],
    "source": [
     "tp.sql(\"\"\"SELECT customerName, customerNumber, oderNumber, status, quantityOrdered\n",
-    "            FROM customers JOIN orders \"\"\")"
+    "            FROM customers JOIN orders USING(customerNumber)\"\"\")"
    ]
   },
   {
