Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -588,7 +588,8 @@
    "outputs": [],
    "source": [
     "tp.sql(\"\"\"SELECT customerName, customerNumber, oderNumber, status, quantityOrdered\n",
-    "            FROM customers JOIN orders USING(customerNumber)\"\"\")"
+    "            FROM customers JOIN orders USING(customerNumber)\n",
+    "            JOIN \"\"\")"
    ]
   },
   {
