Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -589,7 +589,7 @@
    "source": [
     "tp.sql(\"\"\"SELECT customerName, customerNumber, oderNumber, status, quantityOrdered\n",
     "            FROM customers JOIN orders USING(customerNumber)\n",
-    "            JOIN \"\"\")"
+    "            JOIN orderdetails \"\"\")"
    ]
   },
   {
