Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -699,7 +699,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tp.sql(\"\"\"SELECT customerName, customerNumber, orderNumber, status, quantityOrdered\n",
+    "            FROM customers JOIN orders USING(customerNumber)\n",
+    "            JOIN orderdetails USING (orderNumber)\"\"\").head()"
+   ]
   },
   {
    "cell_type": "markdown",
