Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -702,7 +702,8 @@
    "source": [
     "tp.sql(\"\"\"SELECT customerName, customerNumber, orderNumber, status, quantityOrdered\n",
     "            FROM customers JOIN orders USING(customerNumber)\n",
-    "            JOIN orderdetails USING (orderNumber)\"\"\").head()"
+    "            JOIN orderdetails USING (orderNumber)\n",
+    "            WHERE quant\"\"\").head()"
    ]
   },
   {
