Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -703,8 +703,8 @@
     "tp.sql(\"\"\"SELECT customerName, customerNumber, orderNumber, status, quantityOrdered\n",
     "            FROM customers JOIN orders USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
-    "            WHERE quantityOrderes >= 30\n",
-    "            \"\"\").head()"
+    "            WHERE quantityOrdered >= 30\n",
+    "            SORT BY\"\"\").head()"
    ]
   },
   {
