Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -704,7 +704,7 @@
     "            FROM customers JOIN orders USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
     "            WHERE quantityOrdered >= 30\n",
-    "            SORT BY\"\"\").head()"
+    "            SORT BY quan\"\"\").head()"
    ]
   },
   {
