Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -717,7 +717,7 @@
     "            FROM customers JOIN orders USING(customerNumber)\n",
     "            JOIN orderdetails USING (orderNumber)\n",
     "            WHERE quantityOrdered >= 30\n",
-    "            SORT BY quantityOrderes ASC\"\"\").head()"
+    "            O BY quantityOrderes ASC\"\"\").head()"
    ]
   },
   {
